💄(frontend) fix the center of product title
The title was not centered on small device

--- a/src/frontend/js/widgets/SyllabusCourseRunsList/components/CourseProductItem/_styles.scss
+++ b/src/frontend/js/widgets/SyllabusCourseRunsList/components/CourseProductItem/_styles.scss
@@ -70,6 +70,7 @@
     & .product-widget__header-main {
       display: flex;
       justify-content: center;
+      text-align: center;
     }
 
     & .product-widget__title {
